--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -51,17 +51,17 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
-.past {
+.pastColor {
   background-color: #d3d3d3;
   color: white;
 }
 
-.present {
+.presentColor {
   background-color: #ff6961;
   color: white;
 }
 
-.future {
+.futureColor {
   background-color: #77dd77;
   color: white;
 }
