--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -72,9 +72,15 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: black;
+  margin-right: 5px;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.time {
+  margin-left: 10px;
 }
